@@ -1,3 +1,11 @@
+
+2008-04-17  Sancho Lerena <slerena@artica.es>
+
+	* lib/PandoraFMS/Config.pm: Shorten description in help.
+
+	* lib/PandoraFMS/DB.pm: Data server module autocreation don't
+	assign a id_module to tagente_module record. Fixed.
+
 2008-04-16  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/DB.pm: Small code optimization. Took a couple
